--- a/week03/styles.css
+++ b/week03/styles.css
@@ -4,10 +4,7 @@
 body{
   font-family: "Georgia", serif;
   color: black;
-  line-height: 140%
+  line-height: 140%;
   margin: 30px;
-  
-
-
-
+ background-image: url("page-bg.gif");
 }
