--- a/week03/styles.css
+++ b/week03/styles.css
@@ -1,13 +1,112 @@
 @charset "utf-8";
 /* CSS Document */
-
-body{
-  font-family: "Georgia", serif;
+/*DONE!*/
+body {
+  font-family: Georgia, Times, serif;
   color: #000000;
   line-height: 140%;
-  margin: 30px;
- background-image: url("page-bg.gif");
- background-repeat: no-repeat;
- background-attachment: fixed;
- background-color: #F7F3DE;
+  margin: 30px 30px 30px 30px;
+  background-image: url("page-bg.gif");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: #F7F3DE;
+}
+
+header h1 {
+  font-size: 350%;
+  color: #7C1A00;
+  padding: 40px 40px 40px 120px;
+  background-image: url("header-image-1.gif");
+  background-repeat: no-repeat;
+  background-position: left top;
+}
+
+#container {
+  margin-bottom: 30px;
+
+}
+
+nav{
+  float: left;
+  width: 150px;
+
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  color: #7C1A00;
+
+}
+
+nav li {
+margin : 10px;
+border-width: 1px;
+border-style: solid;
+border-color: #7C1A00;
+background-color: #FFE597;
+
+
+}
+nav a {
+  color : white;
+  background-color: #8C9273;
+  padding: 3px 60px 3px 3px;
+  text-decoration: none;
+}
+
+nav a:hover{
+background-color: #7C1A00;
+
+}
+
+#content{
+background-image: url("trans-bg.gif");
+border-width: 1px;
+border-style: solid;
+border-color: #CCCCCC;
+margin-left: 180px;
+padding: 10px;
+
+}
+
+footer{
+  clear: both;
+  text-align: center;
+}
+
+footer li {
+display: inline;
+padding: 10px;
+
+}
+h1 {
+
+color: #8C9273;
+
+}
+h2{
+  border-width: 0px 0px 5px 20px;
+  border-style: solid;
+  border-color: #8C9273;
+  padding left: 5px;
+}
+h3 {
+  background-image: url("header-star-1.gif");
+  background-repeat: no-repeat;
+  padding-left: 20px;
+}
+blockquote{
+  background-color: #FFE597;
+}
+ul{
+  list-style-type: square;
+}
+a {
+  color: #7C1A00;
+  font-weight: bold;
+}
+a:hover{
+  background-color: #FFE597;
 }
